fix for overflow coupon text

--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -248,7 +248,9 @@
   }
   
   #post .coupon .center {
-    height: 100%;
+      width: 100%;
+      height: 100%;
+      margin: 0;
   }
 
   #post .coupon .redeem, 
